# photagger

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt  run.py  simulate_drop.py  vision_engine.py  watcher.py  xmp_generator.py
Processing/: test_photo.raw
src/photagger/: __init__.py  __main__.py  app.py  config.py  constants.py  duplicate_detector.py  exif_reader.py  exposure_analyzer.py  face_detector.py  gallery_widget.py  history_db.py  icons.py  image_viewer.py  keyboard_shortcuts.py  logger.py  queue_manager.py  session_report.py  smart_sorter.py  theme.py  vision_engine.py  watcher.py  xmp_generator.py
src/photagger/resources/: photo_categories.json
tests/: test_vision_engine.py  test_watcher.py  test_xmp_generator.py
